[workspace]
members = [
  "contracts/main",
  "crates/core",
]
resolver = "2"

[workspace.dependencies]
# external
cosmwasm-schema = "2.1.4"
cosmwasm-std = "2.1.4"
cw-storage-plus = "2.0.0"
cw-utils = "2.0.0"
cw2 = "2.0.0"
neutron-sdk = "0.11.0"
neutron-std = "5.0.1-rc0"
prost = "0.12.3"
serde = { version = "1.0.204", default-features = false, features = ["derive"] }
schemars = "0.8.21"
thiserror = "1.0.58"
# internal
zephyrus-core   = { path = "crates/core" }
hydro-interface = { path = "crates/hydro_interface" }

[profile.release]
codegen-units     = 1
debug             = false
debug-assertions  = false
incremental       = false
lto               = true
overflow-checks   = true
opt-level         = 's'
panic             = "abort"
rpath             = false
