[package]
name = "zephyrus-main"
version = "0.3.1"
edition = "2021"

[[bin]]
name = "zephyrus-main-schema"
path = "schema.rs"
doctest = false
test = false

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[dependencies]
cosmwasm-schema.workspace = true
cosmwasm-std.workspace = true
cw-storage-plus.workspace = true
cw-utils.workspace = true
cw2.workspace = true
serde.workspace = true
neutron-sdk.workspace = true
neutron-std.workspace = true
zephyrus-core.workspace = true
hydro-interface.workspace = true
thiserror.workspace = true

[dev-dependencies]
prost.workspace = true
serde_json = "1.0"
